--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@
 .gradle
 /local.properties
 .idea
+.idea/misc.xml
+.idea/compiler.xml
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
+/.idea
 /build
 /captures
 .externalNativeBuild
