--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.MainActivity"
+            android:name=".Main.MainActivity"
             android:label="@string/app_name" />
         <activity android:name=".activities.PreferenciasActivity" />
         <activity android:name=".widget.ConfiguraWidget">
