--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,17 +5,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".entities.Aplicacion"
         android:allowBackup="true"
         android:icon="@drawable/editor_svg"
         android:label="@string/app_name"
-        android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity android:name=".common.view.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".LoginActivity">
         </activity>
         <activity
             android:name=".main.view.MainActivity"
