--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,8 @@
         </activity>
         <activity android:name=".login.view.LoginActivity">
         </activity>
+        <activity android:name=".login.view.CustomLoginActivity">
+        </activity>
         <activity
             android:name=".main.view.MainActivity"
             android:label="@string/app_name" />
