--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.android.support:support-vector-drawable:25.1.0'
     compile 'com.android.support:animated-vector-drawable:25.1.0'
     compile 'com.firebaseui:firebase-ui-auth:1.1.1'
+    compile 'com.firebaseui:firebase-ui-database:1.1.1'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
